--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.9.1",
     "@types/bcrypt": "^5.0.2",
     "@vercel/postgres": "^0.5.1",
+    "@vercel/speed-insights": "^1.0.10",
     "bcrypt": "^5.1.1",
     "currency.js": "^2.0.4",
     "framer-motion": "^10.17.9",
